created the html for the portfolio page and added several element

--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
 </head>
 
 <body>
+  <nav id="navbar">
+    <ul style="display: inline; float: right;">
+      <li>About</li>
+      <li>Work</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+  <div>
+    <header>Hey I am Rach</header>
+    <h1> A web Developer</h1>
+  </div>
+  <div>
+    <h1> These Are Some Of My Projects</h1>
+    <div id="div-Img">
+      <img src="img/download.jpeg" alt="project one">
+      <label>Calculator</label>
+      <img src="img/download.png" alt="Project two">
+      <label>Landing Page</label>
+      <img src="img/images (1).png" alt=" project three">
+      <label>Website</label>
+      <img src="img/images.png" alt=" project four">
+      <label>software</label>
+      <button>See All</button>
+
+    </div>
+
+  </div>
+  <div>
+    <h1> Let's Work Together</h1>
+    <p>How do you like your coffee</p>
+    <div>
+      <img src="img/icons/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png" alt="linkin">
+      <img src="img/icons/iconfinder_1_Twitter_colored_svg_5296514.png " alt="twitter">
+      <img src="img/icons/instagram.png" alt="instagram">
+      <img src="img/icons/whats.png" alt="whatsapp" alt="whatsapp">
+    </div>
+  </div>
+  <footer>
+    <ul>
+      <li style="float: left;">This is just a fake portfolio. All the projects and contact details given are not real.
+      </li>
+      <li style="float: right;">© Created for Microverse</li>
+    </ul>
+  </footer>
+
+
+
+
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <p>Hello World We are software Developers.</p>
