--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
 
 <body>
   <nav id="navbar">
-    <ul style="display: inline; float: right;">
+    <ul >
       <li>About</li>
       <li>Work</li>
       <li>Contact</li>
     </ul>
   </nav>
-  <div>
-    <header>Hey I am Rach</header>
-    <h1> A web Developer</h1>
+  <div id="welcome-section">
+    <header>Hey I am Wazih and Rachid</header>
+    <h1> We are a web Developer</h1>
   </div>
-  <div>
+  <div class="projects">
     <h1> These Are Some Of My Projects</h1>
     <div id="div-Img">
-      <img src="img/download.jpeg" alt="project one">
-      <label>Calculator</label>
-      <img src="img/download.png" alt="Project two">
-      <label>Landing Page</label>
-      <img src="img/images (1).png" alt=" project three">
-      <label>Website</label>
-      <img src="img/images.png" alt=" project four">
-      <label>software</label>
+      <figure class="project-tile">
+        <img src="img/download.jpeg" alt="project one">
+      </figure>
+      <figcaption>Calculator</figcaption>
+      <figure class="project-tile">
+        <img src="img/download.png" alt="Project two">
+      </figure>
+      <figcaption>Landing Page</figcaption>
+      <figure class="project-tile">
+        <img src="img/images (1).png" alt=" project three">
+      </figure>
+      <figcaption>>Website</figcaption>
+      <figure>
+        <img src="img/images.png" alt=" project four">
+      </figure>
+      <figcaption>software</figcaption>
       <button>See All</button>
 
     </div>
@@ -38,11 +46,11 @@
   <div>
     <h1> Let's Work Together</h1>
     <p>How do you like your coffee</p>
-    <div>
-      <img src="img/icons/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png" alt="linkin">
-      <img src="img/icons/iconfinder_1_Twitter_colored_svg_5296514.png " alt="twitter">
-      <img src="img/icons/instagram.png" alt="instagram">
-      <img src="img/icons/whats.png" alt="whatsapp" alt="whatsapp">
+    <div class="social-media">
+      <img class="icon" src="img/icons/iconfinder_1_Linkedin_unofficial_colored_svg_5296501.png" alt="linkin">
+      <img class="icon" src="img/icons/iconfinder_1_Twitter_colored_svg_5296514.png " alt="twitter">
+      <img class="icon" src="img/icons/instagram.png" alt="instagram">
+      <img class="icon" src="img/icons/whats.png" alt="whatsapp" alt="whatsapp">
     </div>
   </div>
   <footer>
