added more styles and html edits

--- a/index.html
+++ b/index.html
@@ -9,40 +9,52 @@
 
 <body>
   <nav id="navbar">
-    <ul >
-      <li>About</li>
-      <li>Work</li>
-      <li>Contact</li>
+    <ul style="list-style-type: none; float:right">
+      <li style="display: inline;">About</li>
+      <li style="display: inline;">Work</li>
+      <li style="display: inline;"> Contact</li>
     </ul>
-  </nav>
+  </nav><br>
   <div id="welcome-section">
-    <header>Hey I am Wazih and Rachid</header>
-    <h1> We are a web Developer</h1>
+    <header>Hey I am Wazih and Rachid
+      We are a web Developer</header>
+
   </div>
   <div class="projects">
     <h1> These Are Some Of My Projects</h1>
-    <div id="div-Img">
-      <figure class="project-tile">
-        <img src="img/download.jpeg" alt="project one">
-      </figure>
-      <figcaption>Calculator</figcaption>
-      <figure class="project-tile">
-        <img src="img/download.png" alt="Project two">
-      </figure>
-      <figcaption>Landing Page</figcaption>
-      <figure class="project-tile">
-        <img src="img/images (1).png" alt=" project three">
-      </figure>
-      <figcaption>>Website</figcaption>
-      <figure>
-        <img src="img/images.png" alt=" project four">
-      </figure>
-      <figcaption>software</figcaption>
-      <button>See All</button>
+    <div id="div-Img" class="flex-container">
+
+      <div>
+        <figure class="project-tile">
+          <img src="img/download.jpeg" alt="project one">
+        </figure>
+        <figcaption>Calculator</figcaption>
+      </div>
+      <div>
+        <figure class="project-tile">
+          <img src="img/download.png" alt="Project two">
+        </figure>
+        <figcaption>Landing Page</figcaption>
+      </div>
+      <div>
+        <figure class="project-tile">
+          <img src="img/images (1).png" alt=" project three">
+        </figure>
+        <figcaption>Website</figcaption>
+      </div>
+      <div>
+        <figure>
+          <img src="img/images.png" alt=" project four">
+        </figure>
+        <figcaption>software</figcaption>
+      </div>
+
+
+
 
     </div>
-
-  </div>
+    <button hrf="#">See All</button>
+  </div id="contact">
   <div>
     <h1> Let's Work Together</h1>
     <p>How do you like your coffee</p>
@@ -53,11 +65,12 @@
       <img class="icon" src="img/icons/whats.png" alt="whatsapp" alt="whatsapp">
     </div>
   </div>
-  <footer>
+  <footer ">
     <ul>
-      <li style="float: left;">This is just a fake portfolio. All the projects and contact details given are not real.
-      </li>
-      <li style="float: right;">© Created for Microverse</li>
+      <li style=" float: left; list-style-type: none;">This is just a fake portfolio. All the projects and contact
+    details given are not real.
+    </li>
+    <li style="float: right; list-style-type: none;">© Created for Microverse</li>
     </ul>
   </footer>
 
