--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
 <body>
   <nav id="navbar">
     <ul style="list-style-type: none; float:right">
-      <li style="display: inline;">About</li>
+      <li style="display: inline;"><a href="#footer"> About</a></li>
       <li style="display: inline;">Work</li>
-      <li style="display: inline;"> Contact</li>
+      <li style="display: inline;">Contact</li>
     </ul>
-  </nav><br>
+  </nav>
   <div id="welcome-section">
     <header>Hey I am Wazih and Rachid
-      We are a web Developer</header>
+    </header>
+    <h1>We are a web Developer</h1>
 
   </div>
-  <div class="projects">
+  <div class="projects" id="projects">
     <h1> These Are Some Of My Projects</h1>
     <div id="div-Img" class="flex-container">
 
       <div>
         <figure class="project-tile">
-          <img src="img/download.jpeg" alt="project one">
+          <a href="https://www.musicinafrica.net/node/32998">
+            <img src="img/download.jpeg" alt="project one"></a>
         </figure>
         <figcaption>Calculator</figcaption>
       </div>
@@ -49,9 +51,6 @@
         <figcaption>software</figcaption>
       </div>
 
-
-
-
     </div>
     <button hrf="#">See All</button>
   </div id="contact">
@@ -65,12 +64,12 @@
       <img class="icon" src="img/icons/whats.png" alt="whatsapp" alt="whatsapp">
     </div>
   </div>
-  <footer ">
+  <footer id="footer">
     <ul>
       <li style=" float: left; list-style-type: none;">This is just a fake portfolio. All the projects and contact
-    details given are not real.
-    </li>
-    <li style="float: right; list-style-type: none;">© Created for Microverse</li>
+        details given are not real.
+      </li>
+      <li style="float: right; list-style-type: none;">© Created for Microverse</li>
     </ul>
   </footer>
 
