--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body class="fullpage loggeed-in sidebar-false">
   <nav id="navbar" class="nav">
-    <ul class="nav-list">
-      <li><a href="#footer"></a> About</li>
+    <ul class="nav-list" style="display: flex;
+    margin-right: 2rem;
+">
+      <li>About</li>
       <li>Work</li>
-      <li>Contact</li>
+      <li><a href="#footer"></a>Contact</li>
     </ul>
   </nav>
   <section id="welcome-section" class="welcome-section">
@@ -20,7 +22,7 @@
     </h1>
     <p>A web Developer</p>
   </section>
-  <section id="projects" class="projecs-section">
+  <section id="projects" class="projecs-section" style="background: var(--main-blue);">
 
     <h2 class="projects-section-header"> These Are Some Of My Projects</h2>
     <div id="div-Img" class="projects-grid">
@@ -30,7 +32,7 @@
       <a href="https://www.musicinafrica.net/node/32998" target="_blank" class="project project-tile">
         <img class="project-image" src="/Users/Duke/Rachid-Wazih/Rachid-Wazih/img/tribute.jpg" alt="project">
         <p class="project-tile"><span class="code">
-            <</span>"Tribute Page"<span class="code">/>
+            <</span>" Tribute Page "<span class=" code">/>
           </span></p>
       </a>
 
@@ -38,14 +40,14 @@
         <img class="project-image" src="/Users/Duke/Rachid-Wazih/Rachid-Wazih/img/random-quote-machine.png"
           alt="project">
         <p class="project-tile"><span class="code">
-            <</span>"Random Quote Machine "<span class=" code">/>
+            <</span>" Random Quote Machine "<span class=" code">/>
           </span></p>
       </a>
 
       <a href="https://www.musicinafrica.net/node/32998" target="_blank" class="project project-tile">
         <img class="project-image" src="/Users/Duke/Rachid-Wazih/Rachid-Wazih/img/calc.png" alt="project">
         <p class="project-tile"><span class="code">
-            <</span>"JavaScript Calculator"<span class="code">/>
+            <</span>" JavaScript Calculator "<span class=" code">/>
           </span></p>
       </a>
 
@@ -60,14 +62,14 @@
       <a href="https://www.musicinafrica.net/node/32998" target="_blank" class="project project-tile">
         <img class="project-image" src="/Users/Duke/Rachid-Wazih/Rachid-Wazih/img/wiki.png" alt="project">
         <p class="project-tile"><span class="code">
-            <</span>"Wikipedia Viewer"<span class="code">/>
+            <</span>" Wikipedia Viewer "<span class=" code">/>
           </span></p>
       </a>
 
       <a href="https://www.musicinafrica.net/node/32998" target="_blank" class="project project-tile">
         <img class="project-image" src="/Users/Duke/Rachid-Wazih/Rachid-Wazih/img/tic-tac-toe.png" alt="project">
         <p class="project-tile"><span class="code">
-            <</span>"Tic Tac Toe Game"<span class="code">/>
+            <</span>" Tic Tac Toe Game "<span class=" code">/>
           </span></p>
       </a>
 
@@ -77,40 +79,39 @@
 
     </div>
     <a hrf="https://www.youtube.com/channel/UCsAQsMW54wU7G_3hiD2dWgA?view_as=subscriber" class="btn btn-show-all"
-      target="_blank">"See All" <i class="fas fa-chevron-right">::before </i></a>
+      target="_blank">" See All " <i class="fas fa-chevron-right"></i></a>
 
   </section>
   <section id="contact" class="contact-section">
     <div class="contact-section-header">
       <h2> Let's Work Together</h2>
-      <p>How do you like your coffee</p>
+      <p>How do you like your coffee?</p>
     </div>
     <div class="contact-links">
       <a href="https://facebook.com/wazihgod" target="_blank" class="btn contact-details">
-        <i class="fab fa-facebook-square">::before</i>" Facebook"</a>
+        <i class="fab fa-facebook-square"></i>" Facebook "</a>
 
       <a href="tel:+237677689422" target="_blank" class="btn contact-details">
-        <i class="fab fa-fa-mobile-all">::before</i>" Call Me"</a>
+        <i class="fab fa-fa-mobile-all"></i>" Call Me "</a>
 
       <a id="profile-link" href="https://github.com/wazih237" target="_blank" class="btn contact-details">
-        <i class="fab fa-github">::before</i>" Github"</a>
+        <i class="fab fa-github"></i>" Github "</a>
 
       <a href="https://twitter.com/wazihgod" target="_blank" class="btn contact-details">
-        <i class="fab fa-twitter">::before</i>" Twitter"</a>
+        <i class="fab fa-twitter"></i>" Twitter "</a>
 
       <a href="mailto:wazih237@gmail.com" target="_blank" class="btn contact-details">
-        <i class="fab fa-at">::before</i>" Send a Mail"</a>
+        <i class="fab fa-at"></i>" Send a Mail "</a>
     </div>
 
   </section>
   <footer id="footer">
-    <p>" **This is just a fake portfolio. All the projects and contact
-      details given are not real.
-      "
+    <p style="float: left;">"All the projects and contact
+      details given are real."
     </p>
-    <p>" © Created for <a
+    <p style="float: right;">" © Created for <a
         href="https://www.google.com/search?q=wazih&oq=wazih&aqs=chrome..69i57j46j0l4j69i60l2.3040j0j4&sourceid=chrome&ie=UTF-8"
-        target="_blank">"WAZIH "<i class="fab fa-free-code-camp">::before</i></a> "</p>
+        target="_blank">" WAZIH "<i class="fab fa-free-code-camp"></i></a> "</p>
 
   </footer>
 
